fixed the overflow isue

--- a/project/static/project/css/services.css
+++ b/project/static/project/css/services.css
@@ -7,6 +7,10 @@
     font-family: 'Syne', sans-serif;
     text-decoration: none;
 }
+body
+{
+  overflow-x: hidden;
+}
 :root{
     --eerie-black: rgba(29, 31, 35, 0.92);
     --eerie-black2: rgba(23, 24, 28, 0.913);
@@ -560,3 +564,18 @@
     overflow: hidden;
 }
 }
+
+
+
+
+
+.wrapper .item
+{
+    min-height: 100vh;
+
+    background: var(--background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
